##############################################################################
# Spectral Python (SPy) package change log
##############################################################################

2013-11-02	tboggs <tboggs@users.sourceforge.net>

    Added `cov` keyword to `rx` function.

    * algorithms/detectors.py:
      (RXW.__init__): Accept `cov` keyword
      (RXW.__call__): Use optional covariance.
      (rx): Accept `cov` keyword.

    Added ImageView class for imshow wrapper.

    * graphics/__init__.py: Import imshow from spypylab.
    * graphics/spypylab.py:
      (ImageView): New class
      (imshow): Moved from graphics.py. Added `parent` keyword for
        implementing zoom windows.

2013-09-06	tboggs <tboggs@users.sourceforge.net>

    Updated version to 0.12

2013-09-06	tboggs <tboggs@users.sourceforge.net>

    Allow calling `envi.create_image` with keyword args instead of a metadata
    dict using ENVI-specific parameter names.

    * io/envi.py:
      (gen_params): Cast data type to str.
      (create_image): Make `metadata` arg optional and accept keywords.
    * tests/__init__.py: Added ENVI tests
    * tests/envi.py: New file

2013-09-02	tboggs <tboggs@users.sourceforge.net>

    Default WX_GL_DEPTH_SIZE to 24 bits.

    * spectra.py (SpySettings): Changed WX_GL_DEPTH_SIZE to 24.

    Added `show_progress` to settings object.

    * spectral.spectral.SpySettings:
      (show_progress): New member
    * utilities/status:
      (__init__): Remove self.silent and use settings.show_progress instead.
      (display_percentage): ditto
      (update_percentage): ditto
      (end_percentage): ditto

    Encapsulate Status members.

    * utilities/status.py:
      - pre-Text -> _pretext
      - percentage -> _percentage
      - overwriteLine -> _overwrite
      - percentFormat -> _percent_fmt
      - textLength -> _text_len
      (update_percentage): member name changes
      (end_percentage): ditto
      (write): ditto

    