@@ -36,24 +36,30 @@ Miscellaneous math functions
 import numpy as np
 
 
-def matrix_sqrt(X, symmetric=False):
+def matrix_sqrt(X, symmetric=False, inverse=False):
     '''Returns the matrix square root of X.
 
     Arguments:
 
         `X` (square class::`numpy.ndarrray`)
 
-        `symmetric` (optional, False by default):
+        `symmetric` (bool, default False):
 
             If True, `X` is assumed to be symmetric, which speeds up
             calculation of the square root.
+
+        `inverse` (bool, default False):
+
+            If True, computes the matrix square root of inv(X).
 
     Returns a class::`numpy.ndarray` `S`, such that S.dot(S) = X
     '''
     (vals, V) = np.linalg.eig(X)
     k = len(vals)
-    SRV = np.zeros((k, k))
-    SRV[np.diag_indices(k)] = np.sqrt(vals)
+    if inverse is False:
+        SRV = np.diag(np.sqrt(vals))
+    else:
+        SRV = np.diag(1. / np.sqrt(vals))
     if symmetric:
         return V.dot(SRV).dot(V.T)
     else:
